--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "d3": "^5.9.2",
     "d3-fetch": "^1.1.2",
     "exorcist": "^0.4.0",
+    "flickity": "^2.2.0",
     "google-spreadsheets": "^0.5.1",
     "googleapis": "^18.0.0",
     "grunt": "^1.0.0",
