--- a/project.json
+++ b/project.json
@@ -13,14 +13,14 @@
   "production": false,
   "year":"2019",
   "title": "",
-  "description": "",
-  "seo_title": "",
+  "description": "Plastic workers in Minh Khai, Vietnam embrace the perks of a global recycling trade - while grappling with health and environmental costs.",
+  "seo_title": "Dirty Business - Global recycling has brought economic benefits and environmental costs to Vietnam.",
   "author":"",
   "date":"2019-04-30",
   "time":"06:00:00Z",
   "url": "https://unseen.com",
   "slug": "/",
-  "twitter_text":"",
+  "twitter_text":"Plastic recyclers in Minh Khai, Vietnam wrestle with the blessings and curses of an empire built on our trash.",
   "hashtag":"",
   "image": "assets/social.jpg",
   "sheets": [],
